[package]
name = "kuso_kuso_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
unicode-segmentation = "1.12.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
hex = "0.4"
dotenvy = "0.15.7"
poise = "0.6.2"
