[package]
name = "kuso_kuso_bot"
version = "1.2.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
unicode-segmentation = "1.12.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
poise = "0.6.2"
log = "0.4.33"
systemd-journal-logger = "2.2.2"
